--- a/css/pruebas.css
+++ b/css/pruebas.css
@@ -1,24 +1,22 @@
 body {
     font-family: Arial, sans-serif;
 }
+
 #colorGrid {
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-gap: 2px;
     width: 400px;
     height: 400px;
-    background-image: linear-gradient(to right, 
-        rgb(255, 0, 0), rgb(255, 255, 0), 
-        rgb(0, 255, 0), rgb(0, 255, 255), 
-        rgb(0, 0, 255), rgb(255, 0, 255), 
-        rgb(255, 0, 0));
 }
+
 .color {
-    width: 100%;
-    height: 100%;
+    width: calc(100% / 16);
+    height: calc(100% / 16);
     cursor: pointer;
 }
-#texto {
-    font-size: 24px;
+
+#selectedColor {
     margin-top: 20px;
+    font-size: 18px;
 }
