--- a/css/pruebas.css
+++ b/css/pruebas.css
@@ -1,23 +1,16 @@
-body {
-    font-family: Arial, sans-serif;
-}
-
-#colorGrid {
+#color-grid {
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-gap: 2px;
-    width: 400px;
-    height: 400px;
-}
-
-.color {
-    width: calc(100% / 16);
-    height: calc(100% / 16);
+    grid-template-columns: repeat(5, 50px);
+    grid-template-rows: repeat(4, 50px);
+    gap: 5px;
+  }
+  
+  .color-box {
+    width: 50px;
+    height: 50px;
     cursor: pointer;
-    float: left; /* Alinear los elementos en la cuadrícula */
-}
-
-#selectedColor {
-    margin-top: 20px;
-    font-size: 18px;
-}
+  }
+  
+  .color-box:hover {
+    opacity: 0.7;
+  }
