--- a/css/pruebas.css
+++ b/css/pruebas.css
@@ -1,16 +1,21 @@
-#color-grid {
+body {
+    font-family: Arial, sans-serif;
+}
+  
+#colorGrid {
     display: grid;
-    grid-template-columns: repeat(5, 50px);
-    grid-template-rows: repeat(4, 50px);
-    gap: 5px;
-  }
-  
-  .color-box {
-    width: 50px;
-    height: 50px;
+    grid-template-columns: repeat(16, 1fr);
+    grid-gap: 2px;
+    width: 400px;
+    height: 400px;
+}
+
+.color {
+    width: calc(100% / 16);
+    height: calc(100% / 16);
     cursor: pointer;
-  }
-  
-  .color-box:hover {
-    opacity: 0.7;
-  }
+}
+
+#texto {
+    margin-top: 20px;
+}
